--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -263,7 +263,7 @@
                             <div class="styleHome">
                                 <center>
                                     <h:link rendered="#{true}" title="#{messages['modulo.admin.enfermeria']}"
-                                            outcome="/pages/informe.xhtml" >                                                   
+                                            outcome="/pages/reporte/enfermeria.xhtml" >
                                         <p:graphicImage value="/resources/img/print.gif" width="65" height="65" />
                                         <h:outputText value="Informe de actividades" style="float: left"/>
                                     </h:link>                                                                                          
