--- a/src/main/webapp/pages/secretaria/lista.xhtml
+++ b/src/main/webapp/pages/secretaria/lista.xhtml
@@ -43,15 +43,17 @@
                 <h:link id="button-edit" title="#{messages['common.edit']} #{messages['paciente.nombre']}" rendered="#{true}" outcome="paciente" styleClass="btn btn-img" 
                         disabled="#{empty pacienteListaServicio.pacienteSelecionado}">
                     <p:graphicImage value="/resources/img/editP.png" width="40" height="40"/>
-                    <f:param name="pacienteId" value="#{pacienteListaServicio.pacienteSelecionado.id}"></f:param>
+                    <f:param name="pacienteId" value="#{pacienteListaServicio.pacienteSelecionado.id}"/>
                     <f:param name="backView" value="secretaria/lista"></f:param>
                 </h:link>
                 #{' '}
-                <p:commandLink id="button-abrirFM" title="#{messages['fichaMedica.abrir']}"  action="#{pacienteListaServicio.renderizarVistaMatriculado('/pages/depSalud/fichaMedica', 'lista')}" 
-                               styleClass="btn btn-img" oncomplete="#{'imgDlg.show();'}"
+                <h:link id="button-abrirFM" title="#{messages['fichaMedica.abrir']}"  outcome="/pages/depSalud/fichaMedica" 
+                               styleClass="btn btn-img" 
                                disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{!account.tienePermiso('SECRETARIA') or !account.tienePermiso('LABORATORISTAS')}">
-                    <p:graphicImage value="/resources/images/consultaMed.png" width="40" height="40"/>                    
-                </p:commandLink>
+                    <p:graphicImage value="/resources/images/consultaMed.png" width="40" height="40"/>
+                    <f:param name="pacienteId" value="#{pacienteListaServicio.pacienteSelecionado.id}"/>
+                    <f:param name="backView" value="secretaria/lista"/>
+                </h:link>
                 #{' '}
                 <h:link id="button-servicioM" title="#{messages['common.add']} #{messages['servicioMedico.nombre']}" outcome="/pages/depSalud/enfermeria/serviciosMedicos/servicioMedico" 
                         styleClass="btn btn-img" 
@@ -61,11 +63,13 @@
                     <f:param name="backView" value="lista"></f:param>
                 </h:link>
                 #{' '}
-                <p:commandLink id="button-Turno" title="#{messages['common.add']} #{messages['turno.nombre']}" action="#{pacienteListaServicio.renderizarVistaMatriculado('/pages/depSalud/turno', 'depSalud/agenda')}" 
-                               styleClass="btn btn-img" oncomplete="#{'imgDlg.show();'}"
+                <h:link id="button-Turno" title="#{messages['common.add']} #{messages['turno.nombre']}" outcome="/pages/depSalud/turno" 
+                               styleClass="btn btn-img" 
                                disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{!account.tienePermiso('SECRETARIA') or !account.tienePermiso('LABORATORISTAS')}">
                     <p:graphicImage value="/resources/img/turno.png" width="40" height="40"/>                  
-                </p:commandLink>
+                    <f:param name="pacienteId" value="#{pacienteListaServicio.pacienteSelecionado.id}"/>
+                    <f:param name="backView" value="depSalud/agenda"/>                    
+                </h:link>
                 #{' '}
                 <h:link id="button-labC" title="#{messages['common.add']} #{messages['Examen.pedidos']}" outcome="/pages/labClinico/pedidoE" styleClass="btn btn-img" 
                         disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{account.tienePermiso('LABORATORISTAS')}" >
